Added post methods for status workspaces

--- a/frontend/src/app/components/modalWindow/modalWindow.component.html
+++ b/frontend/src/app/components/modalWindow/modalWindow.component.html
@@ -81,7 +81,7 @@
         </tui-input-date-range>
         @if (isEditMode) {
         <div class="button-container">
-          <span class="P MP-R save click" (click)="saveClick()">Сохранить</span>
+          <span class="P MP-R save click" (click)="onSubmit()">Сохранить</span>
           <span class="P MP-R clear click" (click)="clearClick()">Очистить</span>
         </div>
         }
