Fixed modal window

--- a/frontend/src/app/components/modalWindow/modalWindow.component.html
+++ b/frontend/src/app/components/modalWindow/modalWindow.component.html
@@ -24,7 +24,7 @@
       <div class="workspase-worker">
         <input type="hidden" formControlName="idWorkspace">
         <input type="hidden" formControlName="idStatusWorkspace">
-        <span class="H3 MP-R workspace-name">Рабочее место</span>
+        <span class="H3 MP-R workspace-name">Рабочее место {{workspaceName}}</span>
         <span class="P MP-R employes-data">Данные сотрудника</span>
         <!-- Работник -->
         <tui-select class="P MP-R custom-select" tuiTextfieldSize="m" formControlName="worker">
