Added few global styles

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,6 +3,30 @@
   --tui-background-base: #d9d9d9;
 }
 
+.click {
+  cursor: pointer;
+}
+
+.submit {
+  padding-left: 5px;
+  color: #419c41;
+  transition: 0.3s;
+
+  &:hover {
+    color: #337533;
+  }
+}
+
+.clear {
+  color: #9c4141;
+
+  transition: 0.3s;
+
+  &:hover {
+    color: #6e2c2c;
+  }
+}
+
 .PP {
   font-size: 12px;
 }
@@ -41,7 +65,6 @@ tui-root {
   font: var(--tui-font-text-s);
   color: var(--tui-text-primary);
   flex: 1;
-  border-image: conic-gradient(var(--tui-background-base) 0 0) fill 0 / 0 / 0 0
-    100vh 0;
+  border-image: conic-gradient(var(--tui-background-base) 0 0) fill 0 / 0 / 0 0 100vh 0;
   -webkit-tap-highlight-color: transparent;
 }
