--- a/frontend/src/app/components/workerCard/worker.component.html
+++ b/frontend/src/app/components/workerCard/worker.component.html
@@ -1,4 +1,4 @@
-<div class="P employe" (click)="onClick()">
+<div class="P employe click" (click)="onClick()">
   @switch (currentWorkspace.fullWorkerName) {
     @case ("") {
       <img class="circle" src="public/dot_gray.svg" />
