--- a/frontend/src/app/pages/createWorker/createWorker.component.html
+++ b/frontend/src/app/pages/createWorker/createWorker.component.html
@@ -38,8 +38,8 @@
       </cdk-virtual-scroll-viewport>
     </tui-select>
     <div class="button-container">
-      <span class="P MP-R submit">Создать</span>
-      <span class="P MP-R clear">Очистить</span>
+      <span class="P MP-R submit click">Создать</span>
+      <span class="P MP-R clear click">Очистить</span>
     </div>
   </form>
 </div>
