--- a/frontend/src/app/pages/workers/workers.scss
+++ b/frontend/src/app/pages/workers/workers.scss
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     width: 50rem;
-    gap: 10px;
+    justify-content: space-between;
 }
 
 .worker-text {
