--- a/frontend/src/app/pages/workers/workers.component.html
+++ b/frontend/src/app/pages/workers/workers.component.html
@@ -1,16 +1,14 @@
 <div class="container">
   <span class="H2 MP-R">Список всех сотрудников</span>
   <span class="instruction H3 MP-R"
-    >ФИО / Место работы / Должность / Организация</span
+    >ФИО / Должность / Организация / Статус</span
   >
   @for (item of workers; track $index) {
-    <div class="worker" (click)="openWorker()">
-      <span class="worker-text P MP-R">{{ item.firstName }}</span>
-      <span class="worker-text P MP-R">{{ item.lastName }}</span>
-      <span class="worker-text P MP-R">{{ item.middleName }}</span>
-      <span class="worker-text P MP-R">{{ item.place }}</span>
-      <span class="worker-text P MP-R">{{ item.organization }}</span>
-      <span class="worker-text P MP-R">{{ item.position }}</span>
+    <div class="worker click" (click)="openWorker(item.idWorker)">
+      <span class="worker-text P MP-R">{{ item.fullWorkerName }}</span>
+      <span class="worker-text P MP-R">{{ item.postName }}</span>
+      <span class="worker-text P MP-R">{{ item.departmentName }}</span>
+      <span class="worker-text P MP-R">{{ item.statusName }}</span>
     </div>
   }
 </div>
