Added worker lists

--- a/frontend/src/app/pages/workers/workers.component.html
+++ b/frontend/src/app/pages/workers/workers.component.html
@@ -1,14 +1,12 @@
 <div class="container">
   <span class="H2 MP-R">Список всех сотрудников</span>
-  <span class="instruction H3 MP-R"
-    >ФИО / Должность / Организация / Статус</span
-  >
-  @for (item of workers; track $index) {
-    <div class="worker click" (click)="openWorker(item.idWorker)">
-      <span class="worker-text P MP-R">{{ item.fullWorkerName }}</span>
-      <span class="worker-text P MP-R">{{ item.postName }}</span>
-      <span class="worker-text P MP-R">{{ item.departmentName }}</span>
-      <span class="worker-text P MP-R">{{ item.statusName }}</span>
-    </div>
+  <div class="H3 instruction MP-R">
+    <span class="title">ФИО</span>
+    <span class="title">Должность</span>
+    <span class="title">Организация</span>
+    <span class="title">Статус</span>
+  </div>
+  @for (worker of workers; track $index) {
+  <worker-card (workerClicked)="openWorker($event)" [worker]="worker"></worker-card>
   }
 </div>
