--- a/frontend/src/app/components/workerModalWindow/workerModalWindow.component.html
+++ b/frontend/src/app/components/workerModalWindow/workerModalWindow.component.html
@@ -1,12 +1,14 @@
 <div class="worker-info H3 MP-R">Информация о сотруднике</div>
 <form class="container" [formGroup]="form">
   <span class="H3 MP-R">Данные сотрудника</span>
+  <input type="hidden" formControlName="statusWorkerId">
   <input type="hidden" formControlName="workerId">
   <tui-input class="H2 MP-SB custom-input" formControlName="worker">
     Работник:
     <input tuiTextfieldLegacy />
   </tui-input>
   <!-- Должность -->
+  <input type="hidden" formControlName="postId">
   <tui-select class="P MP-R custom-input" tuiTextfieldSize="l" formControlName="post">
     Должность
     <cdk-virtual-scroll-viewport *tuiDataList appendOnly tuiScrollable class="scroll" [itemSize]="3">
@@ -18,6 +20,7 @@
     </cdk-virtual-scroll-viewport>
   </tui-select>
   <!-- Организация -->
+  <input type="hidden" formControlName="departmentId">
   <tui-select class="P MP-R custom-input" tuiTextfieldSize="l" formControlName="department">
     Организация
     <cdk-virtual-scroll-viewport *tuiDataList appendOnly tuiScrollable class="scroll" [itemSize]="3">
@@ -30,6 +33,7 @@
     </cdk-virtual-scroll-viewport>
   </tui-select>
   <!-- Статус -->
+  <input type="hidden" formControlName="statusId">
   <tui-select class="P MP-R custom-input" tuiTextfieldSize="l" formControlName="status">
     Статус
     <cdk-virtual-scroll-viewport *tuiDataList appendOnly tuiScrollable class="scroll" [itemSize]="3">
