Fixed create worker

--- a/frontend/src/app/pages/createWorker/createWorker.component.html
+++ b/frontend/src/app/pages/createWorker/createWorker.component.html
@@ -44,7 +44,7 @@
     </tui-select>
     <div class="button-container">
       <span class="P MP-R submit click" (click)="onSubmit()">Создать</span>
-      <span class="P MP-R clear click">Очистить</span>
+      <span class="P MP-R clear click" (click)="clearClick()">Очистить</span>
     </div>
   </form>
 </div>
