Added delete worker

--- a/frontend/src/app/components/workerModalWindow/workerModalWindow.component.html
+++ b/frontend/src/app/components/workerModalWindow/workerModalWindow.component.html
@@ -47,6 +47,6 @@
   </tui-select>
   <div class="button-container">
     <span class="P MP-R submit click" (click)="onSubmit()">Сохранить</span>
-    <span class="P MP-R clear click">Очистить </span>
+    <span class="P MP-R clear click" (click)="deleteClick()">Удалить</span>
   </div>
 </form>
