Fixed footer and header

--- a/frontend/src/app/components/header/header.scss
+++ b/frontend/src/app/components/header/header.scss
@@ -130,3 +130,7 @@ tui-icon[tuiIcons]:after {
 .header-button:hover {
     color: rgb(195, 194, 199);
 }
+
+.header-hidden {
+    transform: translateY(-100%);
+  }
