--- a/frontend/src/app/components/header/header.html
+++ b/frontend/src/app/components/header/header.html
@@ -1,5 +1,5 @@
 @if (!loginPage) {
-<header class="header" tuiNavigationHeader>
+<header class="header" [ngClass]="{ 'header-hidden': !isHeaderVisible }" tuiNavigationHeader>
     <a href="/" class="logo">
         <img src="public/titan2.svg" alt="" srcset="">
     </a>
