--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,9 @@
 <tui-root>
-<app-header/>
-<router-outlet />
-<app-footer/>
+    <div class="page">
+        <app-header></app-header>
+        <main class="content">
+            <router-outlet></router-outlet>
+        </main>
+        <app-footer></app-footer>
+    </div>
 </tui-root>
