--- a/frontend/src/app/components/workspaceCard/worker.scss
+++ b/frontend/src/app/components/workspaceCard/worker.scss
@@ -23,9 +23,7 @@
 
 .delete {
   height: 18px;
-  padding-left: 347px;
-  padding-top: 106px;
-  position: absolute;
+  margin-left: 21.5rem;
 }
 
 .circle-free {
