--- a/frontend/src/app/pages/createWorker/createWorker.component.html
+++ b/frontend/src/app/pages/createWorker/createWorker.component.html
@@ -17,21 +17,18 @@
       <input tuiTextfieldLegacy />
     </tui-input>
     <!-- Должность -->
-    <tui-select class="P MP-R custom-select" tuiTextfieldSize="l"
-      formControlName="post">
+    <tui-select class="P MP-R custom-select" tuiTextfieldSize="l" formControlName="post">
       Должность
       <cdk-virtual-scroll-viewport *tuiDataList appendOnly tuiScrollable class="scroll" [itemSize]="3">
         <tui-data-list>
-          <button *cdkVirtualFor="let item of posts" tuiOption type="button" [value]="item.name"
-            id="{{item.idPost}}">
+          <button *cdkVirtualFor="let item of posts" tuiOption type="button" [value]="item.name" id="{{item.idPost}}">
             {{item.name}}
           </button>
         </tui-data-list>
       </cdk-virtual-scroll-viewport>
     </tui-select>
     <!-- Отдел -->
-    <tui-select class="P MP-R custom-select" tuiTextfieldSize="l"
-      formControlName="department">
+    <tui-select class="P MP-R custom-select" tuiTextfieldSize="l" formControlName="department">
       Организация
       <cdk-virtual-scroll-viewport *tuiDataList appendOnly tuiScrollable class="scroll" [itemSize]="3">
         <tui-data-list>
@@ -43,7 +40,7 @@
       </cdk-virtual-scroll-viewport>
     </tui-select>
     <div class="button-container">
-      <span class="P MP-R submit click" (click)="onSubmit()">Создать</span>
+      <span class="P MP-R submit click" (click)="onSubmit()" (keydown.enter)="onSubmit()" tabindex="0">Создать</span>
       <span class="P MP-R clear click" (click)="clearClick()">Очистить</span>
     </div>
   </form>
