--- a/frontend/src/app/components/modalWindow/modalWindow.scss
+++ b/frontend/src/app/components/modalWindow/modalWindow.scss
@@ -16,6 +16,7 @@
   box-shadow: 0px 3.201px 3.201px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(12px);
   gap: 5px;
+  align-items: center;
 }
 
 .employes-data {
@@ -95,8 +96,7 @@
 
 .edit-mode {
   color: #9f9a9a;
-  padding-left: 150px;
-  padding-bottom: 25px;
+  padding: 1rem;
 }
 
 .custom-input {
@@ -105,7 +105,7 @@
   --tui-text-secondary: black;
   --tui-background-accent-1: black;
   --tui-background-base: white;
-  --tui-padding-l: 1rem;
+  --tui-padding-m: 1.5rem;
 }
 
 .heading {
